--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -201,3 +201,14 @@ vich_uploader:
             uri_prefix: /uploads/pdf/article
             upload_destination: '%kernel.root_dir%/../web/uploads/pdf/article'
             namer: vich_uploader.namer_uniqid
+
+knp_paginator:
+    page_range: 5
+    default_options:
+        page_name: page
+        sort_field_name: sort
+        sort_direction_name: direction
+        distinct: true
+    template:
+        pagination: 'KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig'
+        sortable: 'KnpPaginatorBundle:Pagination:sortable_link.html.twig'
